demo-metadata/objects/Project__c/Project__c.object-meta.xml
<CustomObject>
    <label>Project</label>
    <pluralLabel>Projects</pluralLabel>
    <description>Tracks internal and client-facing projects, their status, and linked supplier accounts.</description>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>