demo-metadata/objects/Project__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Supplier Account</label>
    <type>Lookup</type>
    <description>The supplier account associated with this project.</description>
    <referenceTo>Account__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
</CustomField>