demo-metadata/objects/Project__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
    <description>The planned or actual start date of the project.</description>
</CustomField>